welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:-8: error: Unmatched closing brace '}' ignored here
	}
        ^Array1:-7: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^Array1:-3: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^Array1:2: error: illegal start of statement (no modifiers allowed here)
override def run() {
^