welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {

	var T = new Array[Color](getMondeHauteur());
	for(w<- 0 to T.length-1) {
		T(w) = getCouleurSol();
		avance();
		}
		
		gauche();
		avance();
		droite();
		avance();
		for(w<- 0 to T.length-1) {
		return == T(w)
		}
		
		}

	}


